--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -9,7 +9,10 @@ i{
 html{
   position :relative;
   font-size: 625%;
-  overflow-x: hidden;
+}
+
+body {
+    background-color: #f5f5f5;
 }
 
 .container {
