--- a/src/assets/css/regular.less
+++ b/src/assets/css/regular.less
@@ -1,6 +1,6 @@
 @perviewerProps: 0.72;
 
-.textOverFlow() {
+.textOverFlow {
   overflow: hidden;
   text-overflow:ellipsis;
   white-space: nowrap;
