--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -20,6 +20,49 @@ body {
   margin-left: auto;
   margin-right: auto;
 }
+.cow-btn-group {
+  font-size: 0;
+}
+.cow-btn {
+  display: inline-block;
+  box-sizing: border-box;
+  padding: 10px 15px;
+  vertical-align: top;
+  font-size: 14px;
+  line-height: 1;
+  letter-spacing: 1px;
+  white-space: nowrap;
+  word-spacing: normal;
+  text-align: center;
+  border-radius: 4px;
+  color: #1f2d3d;
+  -webkit-appearance: none;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  cursor: pointer;
+  transition: all .2s;
+}
+.cow-btn.primary {
+  background-color: #20a0ff;
+  border: 1px solid #20a0ff;
+  color: #fff;
+}
+.cow-btn.primary:hover {
+  background-color: #1585d8;
+}
+
+.cow-btn.default {
+  border: 1px solid #bfcbd9;
+  color: #1f2d3d;
+}
+.cow-btn.default:hover {
+  border-color: #20a0ff;
+  color: #20a0ff;
+}
+.cow-btn+.cow-btn {
+  margin-left: 16px;
+}
 
 @media screen and (max-width: 1370px){
   html {
