--- a/src/assets/css/regular.less
+++ b/src/assets/css/regular.less
@@ -1,5 +1,29 @@
+// 淡蓝色 eg: 按钮 tab.active
+@primary: #20a0ff;
+
+// article前瞻图片的比例
 @perviewerProps: 0.72;
 
+// border线条
+.border (@type:all, @color:#e7e7e7) {
+  & when (@type = all) {
+    border: 1px solid @color;
+  }
+  & when (@type = top) {
+    border-top: 1px solid @color;
+  }
+  & when (@type = bottom) {
+    border-bottom: 1px solid @color;
+  }
+  & when (@type = left) {
+    border-left: 1px solid @color;
+  }
+  & when (@type = right) {
+    border-right: 1px solid @color;
+  }
+}
+
+// 超出部分省略号
 .textOverFlow {
   overflow: hidden;
   text-overflow:ellipsis;
