--- a/src/assets/font/iconfont.css
+++ b/src/assets/font/iconfont.css
@@ -1,10 +1,10 @@
 
 @font-face {font-family: "iconfont";
-  src: url('iconfont.eot?t=1497370850976'); /* IE9*/
-  src: url('iconfont.eot?t=1497370850976#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url('iconfont.woff?t=1497370850976') format('woff'), /* chrome, firefox */
-  url('iconfont.ttf?t=1497370850976') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
-  url('iconfont.svg?t=1497370850976#iconfont') format('svg'); /* iOS 4.1- */
+  src: url('iconfont.eot?t=1497640732888'); /* IE9*/
+  src: url('iconfont.eot?t=1497640732888#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('iconfont.woff?t=1497640732888') format('woff'), /* chrome, firefox */
+  url('iconfont.ttf?t=1497640732888') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
+  url('iconfont.svg?t=1497640732888#iconfont') format('svg'); /* iOS 4.1- */
 }
 
 .iconfont {
@@ -15,15 +15,11 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-shijian:before { content: "\e600"; }
-
 .icon-yanjing:before { content: "\e603"; }
-
-.icon-shijian1:before { content: "\e60e"; }
 
 .icon-shijian2:before { content: "\e620"; }
 
-.icon-eye:before { content: "\e622"; }
+.icon-xiazai:before { content: "\e645"; }
 
 .icon-fangdajing:before { content: "\e605"; }
 
@@ -36,10 +32,6 @@
 .icon-message:before { content: "\e637"; }
 
 .icon-weixin1:before { content: "\e602"; }
-
-.icon-xinxi:before { content: "\e62f"; }
-
-.icon-font47:before { content: "\e63d"; }
 
 .icon-gengduo:before { content: "\e627"; }
 
