start message board

--- a/src/assets/css/global.less
+++ b/src/assets/css/global.less
@@ -16,7 +16,12 @@ html{
 body {
     background-color: #f4f4f4;
 }
-
+a {
+  color: @primary;
+}
+input {
+  font-family: 'microsoft YaHei';
+}
 .container {
   width: 12.12rem;
   margin-left: auto;
