--- a/src/assets/css/regular.less
+++ b/src/assets/css/regular.less
@@ -1,5 +1,17 @@
-// 淡蓝色 eg: 按钮 tab.active
+// 淡蓝色 eg: 按钮 tab
 @primary: #20a0ff;
+
+// 深红色 打分器 cow-topLine
+@red: #e34c26;
+
+// 深紫色 cow-topLine
+@violet: #563d7c;
+
+// 藏青色 cow-topLine 文章页侧导航
+@navy: #2c3e50;
+
+// 嫩黄色 cow-topLine 评论版小星
+@yellow: #f1e05a;
 
 // article前瞻图片的比例
 @perviewerProps: 0.72;
