--- a/src/assets/font/iconfont.css
+++ b/src/assets/font/iconfont.css
@@ -1,10 +1,10 @@
 
 @font-face {font-family: "iconfont";
-  src: url('iconfont.eot?t=1497674907931'); /* IE9*/
-  src: url('iconfont.eot?t=1497674907931#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url('iconfont.woff?t=1497674907931') format('woff'), /* chrome, firefox */
-  url('iconfont.ttf?t=1497674907931') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
-  url('iconfont.svg?t=1497674907931#iconfont') format('svg'); /* iOS 4.1- */
+  src: url('iconfont.eot?t=1497802255072'); /* IE9*/
+  src: url('iconfont.eot?t=1497802255072#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('iconfont.woff?t=1497802255072') format('woff'), /* chrome, firefox */
+  url('iconfont.ttf?t=1497802255072') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
+  url('iconfont.svg?t=1497802255072#iconfont') format('svg'); /* iOS 4.1- */
 }
 
 .iconfont {
@@ -18,6 +18,8 @@
 .icon-yanjing:before { content: "\e603"; }
 
 .icon-shijian2:before { content: "\e620"; }
+
+.icon-star:before { content: "\e641"; }
 
 .icon-xiazai:before { content: "\e645"; }
 
@@ -35,9 +37,15 @@
 
 .icon-gengduo:before { content: "\e627"; }
 
+.icon-shandian-copy:before { content: "\e604"; }
+
+.icon-biaoqing1:before { content: "\e623"; }
+
 .icon-qq-copy:before { content: "\e6b1"; }
 
 .icon-dianzan:before { content: "\e676"; }
+
+.icon-ku:before { content: "\e60e"; }
 
 .icon-dianpuxiangqingyedejiage:before { content: "\e634"; }
 
@@ -45,5 +53,9 @@
 
 .icon-bi:before { content: "\e60d"; }
 
+.icon--cry:before { content: "\e6ea"; }
+
 .icon-dianzandian:before { content: "\e612"; }
+
+.icon-cry:before { content: "\e64f"; }
 
