--- a/src/assets/css/reset.css
+++ b/src/assets/css/reset.css
@@ -2,7 +2,7 @@
 /*reset start*/
 html,body,h1,h2,h3,h4,h5,h6,div,dl,dt,dd,ul,ol,li,p,blockquote,pre,hr,figure,table,caption,th,td,form,fieldset,legend,input,button,textarea,menu{margin:0;padding:0;}
 html{
-  -webkit-text-size-adjust:100%;/* 100%ne 关闭字体大小自动调整功能 */
+  /*-webkit-text-size-adjust:100%; /* 100%ne 关闭字体大小自动调整功能 */*/
   /*-webkit-user-select: none;/* 禁止文本被选中 */*/
   -webkit-tap-highlight-color: transparent;/* a标签点击蓝色背景 */
 }
@@ -12,7 +12,7 @@ html,body{
 body{
   font-family: '-apple-system-font','Helvetica Neue','Microsoft YaHei',sans-serif;
   overflow-x: hidden;
-  -webkit-overflow-scrolling: touch;  /* 开启手机端moblie网页快速滚动和回弹的效果 */
+  /*-webkit-overflow-scrolling: touch;  /* 开启手机端moblie网页快速滚动和回弹的效果 坑fixed失效*/
 }
 a{
   color: #333;
