--- a/src/assets/font/iconfont.css
+++ b/src/assets/font/iconfont.css
@@ -1,10 +1,10 @@
 
 @font-face {font-family: "iconfont";
-  src: url('iconfont.eot?t=1497802255072'); /* IE9*/
-  src: url('iconfont.eot?t=1497802255072#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url('iconfont.woff?t=1497802255072') format('woff'), /* chrome, firefox */
-  url('iconfont.ttf?t=1497802255072') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
-  url('iconfont.svg?t=1497802255072#iconfont') format('svg'); /* iOS 4.1- */
+  src: url('iconfont.eot?t=1497968374407'); /* IE9*/
+  src: url('iconfont.eot?t=1497968374407#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('iconfont.woff?t=1497968374407') format('woff'), /* chrome, firefox */
+  url('iconfont.ttf?t=1497968374407') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
+  url('iconfont.svg?t=1497968374407#iconfont') format('svg'); /* iOS 4.1- */
 }
 
 .iconfont {
@@ -17,6 +17,8 @@
 
 .icon-yanjing:before { content: "\e603"; }
 
+.icon-cuowu:before { content: "\e600"; }
+
 .icon-shijian2:before { content: "\e620"; }
 
 .icon-star:before { content: "\e641"; }
@@ -27,6 +29,10 @@
 
 .icon-qq:before { content: "\e616"; }
 
+.icon-zhengque:before { content: "\e618"; }
+
+.icon-zliconwarning01:before { content: "\e64f"; }
+
 .icon-code1:before { content: "\e601"; }
 
 .icon-github:before { content: "\e735"; }
@@ -34,6 +40,8 @@
 .icon-message:before { content: "\e637"; }
 
 .icon-weixin1:before { content: "\e602"; }
+
+.icon-maobi:before { content: "\e690"; }
 
 .icon-gengduo:before { content: "\e627"; }
 
@@ -43,6 +51,8 @@
 
 .icon-qq-copy:before { content: "\e6b1"; }
 
+.icon-huiyuan:before { content: "\e633"; }
+
 .icon-dianzan:before { content: "\e676"; }
 
 .icon-ku:before { content: "\e60e"; }
@@ -51,11 +61,11 @@
 
 .icon-houtaiyuyanguanlinew:before { content: "\e78d"; }
 
-.icon-bi:before { content: "\e60d"; }
+.icon-game:before { content: "\e607"; }
 
-.icon--cry:before { content: "\e6ea"; }
+.icon-bi:before { content: "\e60d"; }
 
 .icon-dianzandian:before { content: "\e612"; }
 
-.icon-cry:before { content: "\e64f"; }
+.icon-huiyuan2:before { content: "\e61e"; }
 
