--- a/src/assets/font/iconfont.css
+++ b/src/assets/font/iconfont.css
@@ -1,10 +1,10 @@
 
 @font-face {font-family: "iconfont";
-  src: url('iconfont.eot?t=1497968374407'); /* IE9*/
-  src: url('iconfont.eot?t=1497968374407#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url('iconfont.woff?t=1497968374407') format('woff'), /* chrome, firefox */
-  url('iconfont.ttf?t=1497968374407') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
-  url('iconfont.svg?t=1497968374407#iconfont') format('svg'); /* iOS 4.1- */
+  src: url('iconfont.eot?t=1498243177550'); /* IE9*/
+  src: url('iconfont.eot?t=1498243177550#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('iconfont.woff?t=1498243177550') format('woff'), /* chrome, firefox */
+  url('iconfont.ttf?t=1498243177550') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
+  url('iconfont.svg?t=1498243177550#iconfont') format('svg'); /* iOS 4.1- */
 }
 
 .iconfont {
@@ -18,6 +18,8 @@
 .icon-yanjing:before { content: "\e603"; }
 
 .icon-cuowu:before { content: "\e600"; }
+
+.icon-zuobiao:before { content: "\e613"; }
 
 .icon-shijian2:before { content: "\e620"; }
 
@@ -43,11 +45,15 @@
 
 .icon-maobi:before { content: "\e690"; }
 
+.icon-zuobiao1:before { content: "\e6c4"; }
+
 .icon-gengduo:before { content: "\e627"; }
 
 .icon-shandian-copy:before { content: "\e604"; }
 
 .icon-biaoqing1:before { content: "\e623"; }
+
+.icon-xiazai19:before { content: "\e615"; }
 
 .icon-qq-copy:before { content: "\e6b1"; }
 
@@ -63,9 +69,13 @@
 
 .icon-game:before { content: "\e607"; }
 
+.icon-zhuzhuangtu1:before { content: "\e60c"; }
+
 .icon-bi:before { content: "\e60d"; }
 
 .icon-dianzandian:before { content: "\e612"; }
+
+.icon-dengji1:before { content: "\e614"; }
 
 .icon-huiyuan2:before { content: "\e61e"; }
 
