--- a/src/assets/css/global.less
+++ b/src/assets/css/global.less
@@ -113,7 +113,7 @@ input {
     border: 1px solid @inputBorderColor;
     font-family: 'microsoft YaHei';
     font-size: inherit;
-    line-height: 1;
+    line-height: 20px;
     outline: none;
     color: #1f2d3d;
     transition: border-color .2s cubic-bezier(.645,.045,.355,1);
