--- a/src/assets/font/iconfont.css
+++ b/src/assets/font/iconfont.css
@@ -1,10 +1,10 @@
 
 @font-face {font-family: "iconfont";
-  src: url('iconfont.eot?t=1498243177550'); /* IE9*/
-  src: url('iconfont.eot?t=1498243177550#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url('iconfont.woff?t=1498243177550') format('woff'), /* chrome, firefox */
-  url('iconfont.ttf?t=1498243177550') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
-  url('iconfont.svg?t=1498243177550#iconfont') format('svg'); /* iOS 4.1- */
+  src: url('iconfont.eot?t=1503301690504'); /* IE9*/
+  src: url('iconfont.eot?t=1503301690504#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('iconfont.woff?t=1503301690504') format('woff'), /* chrome, firefox */
+  url('iconfont.ttf?t=1503301690504') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
+  url('iconfont.svg?t=1503301690504#iconfont') format('svg'); /* iOS 4.1- */
 }
 
 .iconfont {
@@ -18,8 +18,6 @@
 .icon-yanjing:before { content: "\e603"; }
 
 .icon-cuowu:before { content: "\e600"; }
-
-.icon-zuobiao:before { content: "\e613"; }
 
 .icon-shijian2:before { content: "\e620"; }
 
@@ -45,15 +43,11 @@
 
 .icon-maobi:before { content: "\e690"; }
 
-.icon-zuobiao1:before { content: "\e6c4"; }
-
 .icon-gengduo:before { content: "\e627"; }
 
 .icon-shandian-copy:before { content: "\e604"; }
 
 .icon-biaoqing1:before { content: "\e623"; }
-
-.icon-xiazai19:before { content: "\e615"; }
 
 .icon-qq-copy:before { content: "\e6b1"; }
 
@@ -69,13 +63,21 @@
 
 .icon-game:before { content: "\e607"; }
 
-.icon-zhuzhuangtu1:before { content: "\e60c"; }
+.icon-icon-test:before { content: "\e606"; }
+
+.icon-loading:before { content: "\e617"; }
 
 .icon-bi:before { content: "\e60d"; }
 
+.icon-xiazai1:before { content: "\e61d"; }
+
 .icon-dianzandian:before { content: "\e612"; }
 
-.icon-dengji1:before { content: "\e614"; }
+.icon-icon-loading:before { content: "\e60b"; }
 
 .icon-huiyuan2:before { content: "\e61e"; }
+
+.icon-loading1:before { content: "\e642"; }
+
+.icon-loading2:before { content: "\e643"; }
 
