--- a/src/assets/css/global.less
+++ b/src/assets/css/global.less
@@ -118,6 +118,34 @@ input {
       border-color: #ff4949;
     }
   }
+  .cow-select-content {
+    display: flex;
+    align-items: center;
+    padding-right: .1rem;
+    float: left;
+    .cir {
+      position: relative;
+      width: 12px;
+      height: 12px;
+      border-radius: 50%;
+      border: 1px solid #d4d4d4;
+      cursor: pointer;
+      &.active:after {
+        position: absolute;
+        content: '';
+        width: 8px;
+        height: 8px;
+        left: 2px;
+        top: 2px;
+        border-radius: 50%;
+        background-color: @primary;
+      }
+    }
+    span {
+      padding-left: 8px;
+      color: #888;
+    }
+  }
 }
 .cow-upload-content {
   display: flex;
